se agreaga configuracion para el dashboard

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,20 @@
-# Kero-Kero Dashboard - Configuración de Ejemplo
+# Kero-Kero Dashboard - Configuración 
 
-# URL de la API del servidor
+# URL de la API del servidor (pública, se incluye en el bundle)
 NEXT_PUBLIC_API_URL=http://localhost:8080
 
-# API Key para autenticación (debe coincidir con la del servidor)
-NEXT_PUBLIC_API_KEY=your-api-key-here
+# ============================================
+# SEGURIDAD DEL DASHBOARD
+# ============================================
+
+# Contraseña para acceder al dashboard
+# IMPORTANTE: Esta contraseña protege el acceso al dashboard
+# El usuario DEBE ingresarla manualmente al hacer login
+# ⚠️ NO usar NEXT_PUBLIC_ aquí (eso la haría pública)
+# ⚠️ CAMBIAR en producción por una contraseña segura
+DASHBOARD_PASSWORD=admin123
+
+# API Key del servidor (privada, solo para uso interno del dashboard)
+# Esta se usa internamente después de autenticarse con DASHBOARD_PASSWORD
+# NO debe ser accesible desde el navegador
+API_KEY=dev-api-key-12345
