--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kero-kero-dashboard",
   "version": "1.0.0",
   "private": true,
+  "license": "GPL-3.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
